--- a/.github/workflows/ci.cd.dev.yml
+++ b/.github/workflows/ci.cd.dev.yml
@@ -9,7 +9,7 @@ on:
 
 jobs:
   build:
-    if: github.event_pull_request.merged == true
+    if: github.event.pull_request.merged == true
     runs-on: ubuntu_latest
 
     steps:
