--- a/.github/workflows/ci.cd.dev.yml
+++ b/.github/workflows/ci.cd.dev.yml
@@ -15,11 +15,21 @@ jobs:
     steps:
       - uses: actions/checkout@v4.1.7
 
+      - name: Gradle 캐싱
+        uses: actions/cache@v3
+        with:
+          path: |
+            ~/.gradle/caches
+            ~/.gradle/wrapper
+          key: ${{ runner.os }}-gradle-${{ hashFiles('**/*.gradle*', '**/gradle-wrapper.properties') }}
+          restore-keys: |
+            ${{ runner.os }}-gradle-
+
       - name: JDK 17 설치
         uses: actions/setup-java@v4
         with:
           java-version: '17'
-          distribution: 'open-jdk'
+          distribution: 'zulu'
 
       - name: application-dev.yml 생성
         shell: bash
