docs : ci.cd.dev.yml 수정
Grant 작업 중 계속해서 오류 발생으로 인해 경로 확인용 명령어 추가

--- a/.github/workflows/ci.cd.dev.yml
+++ b/.github/workflows/ci.cd.dev.yml
@@ -44,7 +44,10 @@ jobs:
           echo "${{ secrets.APPLICATION_SECRET_YML }}" >> ./application-secret.yml
 
       - name: Grant execute permission for gradlew
-        run: chmod +x woory-backend/gradlew
+        # 경로 확인 후 권한 부여
+        run: |
+          ls -al
+          chmod +x ./gradlew
 
       - name: Build with Gradle
         run: |
