--- a/.github/workflows/ci.cd.dev.yml
+++ b/.github/workflows/ci.cd.dev.yml
@@ -35,8 +35,8 @@ jobs:
       - name: application-dev.yml 생성
         shell: bash
         run: |
-          mkdir -p woory-backend/src/main/resources
-          cd woory-backend/src/main/resources
+          mkdir -p src/main/resources
+          cd src/main/resources
           touch ./application-dev.yml
           touch ./applciation-secret.yml
           
@@ -45,14 +45,10 @@ jobs:
 
       - name: Grant execute permission for gradlew
         # 경로 확인 후 권한 부여
-        run: |
-          ls -al
-          chmod +x ./gradlew
+        run: chmod +x ./gradlew
 
       - name: Build with Gradle
-        run: |
-          cd woory-backend
-          ./gradle clean build
+        run: ./gradlew clean build
 
       - name: Zip project files
         run: zip -r ./$GITHUB_SHA.zip . # 프로젝트 전체 파일 압축
