--- a/appspec.yml
+++ b/appspec.yml
@@ -2,13 +2,13 @@ version: 0.0
 os: linux
 files:
   - source: /
-    destination: /home/woory-backend
+    destination: /home/ubuntu/woory-backend
 file_exists_behavior: OVERWRITE
 
 permissions:
-  - object: /home/woory-backend
-    owner: ec2-user
-    group: ec2-user
+  - object: /home/ubuntu/woory-backend
+    owner: root
+    group: root
     mode: 755
 
 hooks:
