--- a/appspec.yml
+++ b/appspec.yml
@@ -7,8 +7,8 @@ file_exists_behavior: OVERWRITE
 
 permissions:
   - object: /home/ubuntu/woory-backend
-    owner: ubuntu
-    group: ubuntu
+    owner: root
+    group: root
     mode: 755
 
 hooks:
