docs : email에서 검색하는 기능 제외하고 id로 검색하는 기능 추가
group에 userid 추가 repository id로 조회 service email로 조회된거
groupname으로 조회한후 Id로 검색후 group 생성기능

--- a/build.gradle
+++ b/build.gradle
@@ -40,7 +40,7 @@ dependencies {
 
     // 데이터베이스
     runtimeOnly 'com.mysql:mysql-connector-j' // RDS
-    runtimeOnly 'com.h2database:h2' // 로컬 환경
+//    runtimeOnly 'com.h2database:h2' // 로컬 환경
 
     compileOnly 'org.projectlombok:lombok'
     annotationProcessor 'org.projectlombok:lombok'
