--- a/build.gradle
+++ b/build.gradle
@@ -30,6 +30,11 @@ dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
     developmentOnly 'org.springframework.boot:spring-boot-devtools'
 
+    // JWT 사용
+    implementation 'io.jsonwebtoken:jjwt-api:0.12.6'
+    runtimeOnly 'io.jsonwebtoken:jjwt-impl:0.12.6'
+    runtimeOnly 'io.jsonwebtoken:jjwt-jackson:0.12.6'
+
     //추가
     implementation 'org.springframework.boot:spring-boot-starter-mustache'
     implementation 'org.springframework.boot:spring-boot-starter-oauth2-client'
@@ -40,7 +45,7 @@ dependencies {
 
     // 데이터베이스
     runtimeOnly 'com.mysql:mysql-connector-j' // RDS
-//    runtimeOnly 'com.h2database:h2' // 로컬 환경
+    runtimeOnly 'com.h2database:h2' // 로컬 환경
 
     compileOnly 'org.projectlombok:lombok'
     annotationProcessor 'org.projectlombok:lombok'
