refactor : 그룹관련 코드 수정

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -2,6 +2,11 @@ spring:
   application:
     name: woory
 
+  servlet:
+    multipart:
+      max-file-size: 4MB
+      max-request-size: 4MB
+
   profiles:
     default: prod
     include:
