feat : swagger-ui 추가
- api 명세서 자동 완성을 위해 의존성 추가
- config 클래스 등록

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -18,3 +18,9 @@ spring:
         - local
       dev:
         - dev
+
+springdoc:
+  api-docs:
+    path: /swagger/docs
+  swagger-ui:
+    url: /swagger/docs
