--- a/build.gradle
+++ b/build.gradle
@@ -48,6 +48,9 @@ dependencies {
     runtimeOnly 'com.mysql:mysql-connector-j' // RDS
     runtimeOnly 'com.h2database:h2' // 로컬 환경
 
+    // Swagger-ui
+    implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.5.0'
+
     compileOnly 'org.projectlombok:lombok'
     annotationProcessor 'org.projectlombok:lombok'
 
