--- a/.github/workflows/ci.cd.dev.yml
+++ b/.github/workflows/ci.cd.dev.yml
@@ -38,10 +38,12 @@ jobs:
           mkdir -p src/main/resources
           cd src/main/resources
           touch ./application-dev.yml
-          touch ./applciation-secret.yml
+          touch ./application-secret.yml
+          touch ./application-test.yml
           
           echo "${{ secrets.APPLICATION_DEV_YML }}" >> ./application-dev.yml
           echo "${{ secrets.APPLICATION_SECRET_YML }}" >> ./application-secret.yml
+          echo "${{ secrets.APPLICATION_TEST_YML }}" >> ./application-test.yml
 
       - name: keystore 파일 생성
         shell: bash
