--- a/.github/workflows/ci.cd.dev.yml
+++ b/.github/workflows/ci.cd.dev.yml
@@ -52,7 +52,14 @@ jobs:
           touch ./keystore.b64
           echo "${{ secrets.KEYSTORE }}" >> ./keystore.b64
           base64 -d -i ./keystore.b64 > ./keystore.p12
-          
+
+      - name: 테스트용 DB 설정
+        uses: mirromutth/mysql-action@v1.1
+        with:
+          mysql version: '8.0'
+          mysql database: 'woory'
+          mysql root password: ${{ secrets.TEST_DB_PW }}
+          mysql user: 'root'
 
       - name: Grant execute permission for gradlew
         # 경로 확인 후 권한 부여
