fix : push 스크립트 수정
- feat 브랜치가 아닌 dev 브랜치로 트리거가 설정되어 있던 것을 feat으로 올바르게 수정

--- a/.github/workflows/push_if_merged.yaml
+++ b/.github/workflows/push_if_merged.yaml
@@ -2,7 +2,7 @@ name : push feat to dev
 
 on:
   pull_request:
-    branches: [ dev ]
+    branches: [ feat ]
     types: [ closed ]
 jobs:
   if_merged:
