fix : pr 이후 dev 브랜치로 push되지 않는 문제 수정
- origin/feat에서 dev로 push하는 것을 확인했고, 이를 upstream/feat에서 push하도록 수정

--- a/.github/workflows/push_if_merged.yaml
+++ b/.github/workflows/push_if_merged.yaml
@@ -13,7 +13,7 @@ jobs:
       - name: Checkout to feat
         uses: actions/checkout@v4.2.2
         with:
-          ref: feat
+          ref: upstream/feat
           persist-credentials: false
           fetch-depth: 0
       # feat -> dev 브랜치로 push
