--- a/.github/workflows/push_if_merged.yaml
+++ b/.github/workflows/push_if_merged.yaml
@@ -9,16 +9,10 @@ jobs:
     if: github.event.pull_request.merged == true
     runs-on: ubuntu-latest
     steps:
-      # feat 브랜치로 이동
-      - name: Checkout to feat
-        uses: actions/checkout@v4.2.2
+      # feat 변경사항 dev로 이동
+      - uses: actions/checkout@v4.2.2
+      - name:
         with:
-          ref: upstream/feat
           persist-credentials: false
           fetch-depth: 0
-      # feat -> dev 브랜치로 push
-      - name: Push changes to dev
-        uses: actions-js/push@v1.5
-        with:
-          branch: dev
-          github_token: ${{ secrets.GITHUB_TOKEN }}
+        run: git push origin feat:dev
