Revert "fix : feat에서 dev로 푸시하지 못하는 오류 수정"

--- a/.github/workflows/push_if_merged.yaml
+++ b/.github/workflows/push_if_merged.yaml
@@ -9,10 +9,16 @@ jobs:
     if: github.event.pull_request.merged == true
     runs-on: ubuntu-latest
     steps:
-      # feat 변경사항 dev로 이동
-      - uses: actions/checkout@v4.2.2
-      - name:
+      # feat 브랜치로 이동
+      - name: Checkout to feat
+        uses: actions/checkout@v4.2.2
         with:
+          ref: upstream/feat
           persist-credentials: false
           fetch-depth: 0
-        run: git push origin feat:dev
+      # feat -> dev 브랜치로 push
+      - name: Push changes to dev
+        uses: actions-js/push@v1.5
+        with:
+          branch: dev
+          github_token: ${{ secrets.GITHUB_TOKEN }}
