fix : worfklow 문법 실수 수정
- 두 단계로 나눠서 이름 부여함.

--- a/.github/workflows/push_if_merged.yaml
+++ b/.github/workflows/push_if_merged.yaml
@@ -1,4 +1,4 @@
-name : push feat to dev
+name: push feat to dev
 
 on:
   pull_request:
@@ -10,9 +10,11 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       # feat 변경사항 dev로 이동
-      - uses: actions/checkout@v4.2.2
-      - name: push feat to dev
+      - name: fetching changes
+        uses: actions/checkout@v4.2.2
         with:
           persist-credentials: false
           fetch-depth: 0
+
+      - name: push feat to dev
         run: git push origin feat:dev
