fix : runner에서 사용할 github username과 이메일 추가

--- a/.github/workflows/push_if_merged.yaml
+++ b/.github/workflows/push_if_merged.yaml
@@ -14,4 +14,10 @@ jobs:
         with:
           persist-credentials: false
           fetch-depth: 0
-      - run: git push origin feat:dev
+      - run: |
+          # 전역 설정 추가
+          git config --global user.name "woory-actions"
+          git config --global user.email "woory-actions@users.noreply.github.com"
+          
+          # 실제 push 작업 수행
+          git push origin feat:dev
