--- a/.github/workflows/push_if_merged.yaml
+++ b/.github/workflows/push_if_merged.yaml
@@ -16,7 +16,7 @@ jobs:
           fetch-depth: 0
       - run: |
           # 전역 설정 추가
-          git remote set-url git@github.com:SWYP-Woory/woory-backend.git
-          
+          git remote set-url origin git@github.com:SWYP-Woory/woory-backend.git
+
           # 실제 push 작업 수행
           git push origin feat:dev
