Fix/push feat to dev (#234)
* fix : workflow 실행 과정 중 원격 리포지토리에 접근할 수 없었던 문제 수정

- https와 GITHUB_TOKEN으로 해결할 수 있다는 글 참조하여 수정

--- a/.github/workflows/push_if_merged.yaml
+++ b/.github/workflows/push_if_merged.yaml
@@ -15,8 +15,11 @@ jobs:
           persist-credentials: false
           fetch-depth: 0
       - run: |
-          # 전역 설정 추가
-          git remote set-url origin git@github.com:SWYP-Woory/woory-backend.git
-
+          # remote url 변경
+          git config remote.origin.url 'https://${TOKEN}@github.com/${REPOSITORY}.git'
+          
           # 실제 push 작업 수행
           git push origin feat:dev
+        env:
+          TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          REPOSITORY: SWYP-Woory/woory-backend
