--- a/.github/workflows/push_if_merged.yaml
+++ b/.github/workflows/push_if_merged.yaml
@@ -21,5 +21,5 @@ jobs:
           # 실제 push 작업 수행
           git push origin feat:dev
         env:
-          TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          TOKEN: x-access-token:${{ secrets.GITHUB_TOKEN }}
           REPOSITORY: SWYP-Woory/woory-backend
