Fix/push feat to dev (#238)
* fix : user.name과 email 추가

--- a/.github/workflows/push_if_merged.yaml
+++ b/.github/workflows/push_if_merged.yaml
@@ -18,12 +18,16 @@ jobs:
         with:
           persist-credentials: false
           fetch-depth: 0
-      - run: |
+      - name: push feat to dev
+        env:
+          TOKEN: x-access-token:${{ secrets.GITHUB_TOKEN }}
+          REPOSITORY: SWYP-Woory/woory-backend
+        run: |
+          git config --global user.name "github-actions"
+          git config --global user.email "github-actions@users.noreply.github.com"
+          
           # remote url 변경
           git config remote.origin.url "https://$TOKEN@github.com/$REPOSITORY.git"
           
           # 실제 push 작업 수행
           git push origin feat:dev
-        env:
-          TOKEN: x-access-token:${{ secrets.GITHUB_TOKEN }}
-          REPOSITORY: SWYP-Woory/woory-backend
