Fix/push feat to dev (#244)
* fix : 작업이 차례로 수행되지 않는 것인지 확인하기 위해 fetch 작업 직접 수행

--- a/.github/workflows/push_if_merged.yaml
+++ b/.github/workflows/push_if_merged.yaml
@@ -15,8 +15,7 @@ jobs:
     steps:
       # feat 변경사항 dev로 이동
       - uses: actions/checkout@v4.2.2
-        with:
-          fetch-depth: 0
+
       - name: push feat to dev
         env:
           TOKEN: ${{ secrets.GITHUB_TOKEN }}
@@ -27,9 +26,19 @@ jobs:
           
           # remote url 변경
           echo "setting remote origin address"
-          git remote set-url origin "https://x-access-token:$TOKEN@github.com/$REPOSITORY.git"
+
+          git remote add origin "https://x-access-token:$TOKEN@github.com/$REPOSITORY.git"
           echo "setting address to: 'https://x-access-token:$TOKEN@github.com/$REPOSITORY.git'"
+          git remote -v
+          
+          git fetch origin
+          
+          git log --oneline
+          
+          git pull origin feat
+          
+          git log --oneline
           
           # 실제 push 작업 수행
           echo "pushing feat to dev"
-          git push origin feat:dev
+          git push origin dev
