Fix/push feat to dev (#245)
 fix : 오타 수정

--- a/.github/workflows/push_if_merged.yaml
+++ b/.github/workflows/push_if_merged.yaml
@@ -26,8 +26,7 @@ jobs:
           
           # remote url 변경
           echo "setting remote origin address"
-
-          git remote add origin "https://x-access-token:$TOKEN@github.com/$REPOSITORY.git"
+          git remote set-url origin "https://x-access-token:$TOKEN@github.com/$REPOSITORY.git"
           echo "setting address to: 'https://x-access-token:$TOKEN@github.com/$REPOSITORY.git'"
           git remote -v
           
