Fix/push feat to dev (#246)
* fix : 전역 권한 부여로 수정

--- a/.github/workflows/push_if_merged.yaml
+++ b/.github/workflows/push_if_merged.yaml
@@ -1,5 +1,8 @@
 name: push feat to dev
 
+permissions:
+  contents: write
+
 on:
   pull_request:
     branches: [ feat ]
@@ -9,13 +12,9 @@ jobs:
     if: github.event.pull_request.merged == true
     runs-on: ubuntu-latest
 
-    permissions:
-      contents: write
-
     steps:
       # feat 변경사항 dev로 이동
       - uses: actions/checkout@v4.2.2
-
       - name: push feat to dev
         env:
           TOKEN: ${{ secrets.GITHUB_TOKEN }}
@@ -30,14 +29,6 @@ jobs:
           echo "setting address to: 'https://x-access-token:$TOKEN@github.com/$REPOSITORY.git'"
           git remote -v
           
-          git fetch origin
-          
-          git log --oneline
-          
-          git pull origin feat
-          
-          git log --oneline
-          
           # 실제 push 작업 수행
           echo "pushing feat to dev"
-          git push origin dev
+          git push origin feat:dev
