Fix/push feat to dev (#247)
* fix : 기존 스크립트로 회귀

--- a/.github/workflows/push_if_merged.yaml
+++ b/.github/workflows/push_if_merged.yaml
@@ -7,6 +7,8 @@ on:
   pull_request:
     branches: [ feat ]
     types: [ closed ]
+permissions:
+  contents: write
 jobs:
   if_merged:
     if: github.event.pull_request.merged == true
@@ -16,19 +18,12 @@ jobs:
       # feat 변경사항 dev로 이동
       - uses: actions/checkout@v4.2.2
       - name: push feat to dev
-        env:
-          TOKEN: ${{ secrets.GITHUB_TOKEN }}
-          REPOSITORY: SWYP-Woory/woory-backend
         run: |
-          git config --global user.name "github-actions"
-          git config --global user.email "github-actions@users.noreply.github.com"
-          
           # remote url 변경
-          echo "setting remote origin address"
-          git remote set-url origin "https://x-access-token:$TOKEN@github.com/$REPOSITORY.git"
-          echo "setting address to: 'https://x-access-token:$TOKEN@github.com/$REPOSITORY.git'"
-          git remote -v
+          git config remote.origin.url "https://$TOKEN@github.com/$REPOSITORY.git"
           
           # 실제 push 작업 수행
-          echo "pushing feat to dev"
           git push origin feat:dev
+        env:
+          TOKEN: x-access-token:${{ secrets.GITHUB_TOKEN }}
+          REPOSITORY: SWYP-Woory/woory-backend
