Fix/push feat to dev (#248)
* fix : merge 이후 push 하도록 수정

--- a/.github/workflows/push_if_merged.yaml
+++ b/.github/workflows/push_if_merged.yaml
@@ -17,13 +17,13 @@ jobs:
     steps:
       # feat 변경사항 dev로 이동
       - uses: actions/checkout@v4.2.2
-      - name: push feat to dev
-        run: |
-          # remote url 변경
-          git config remote.origin.url "https://$TOKEN@github.com/$REPOSITORY.git"
+        with:
+          persist-credentials: false
+          fetch-depth: 0
+      - run: |
+          git checkout dev
+          
+          git merge feat
           
           # 실제 push 작업 수행
-          git push origin feat:dev
-        env:
-          TOKEN: x-access-token:${{ secrets.GITHUB_TOKEN }}
-          REPOSITORY: SWYP-Woory/woory-backend
+          git push origin dev
