Fix/push feat to dev (#252)
* fix : user.email과 user.name 추가

--- a/.github/workflows/push_if_merged.yaml
+++ b/.github/workflows/push_if_merged.yaml
@@ -7,6 +7,8 @@ on:
   pull_request:
     branches: [ feat ]
     types: [ closed ]
+permissions:
+  contents: write
 jobs:
   if_merged:
     if: github.event.pull_request.merged == true
@@ -19,6 +21,10 @@ jobs:
           persist-credentials: false
           fetch-depth: 0
       - run: |
+          # 전역 설정 추가
+          git config --global user.name "woory-actions"
+          git config --global user.email "woory-actions@users.noreply.github.com"
+
           git checkout dev
           
           git merge feat
