--- a/.github/workflows/push_if_merged.yaml
+++ b/.github/workflows/push_if_merged.yaml
@@ -22,10 +22,14 @@ jobs:
           # 전역 설정 추가
           git config --global user.name "woory-actions"
           git config --global user.email "woory-actions@users.noreply.github.com"
-
+          
+          git remote set-url origin "https://x-access-token:${{ secrets.GITHUB_TOKEN }}@github.com/$REPOSITORY.git
+          
           git checkout dev
           
-          git merge feat
+          git merge feat --no-edit
           
           # 실제 push 작업 수행
           git push origin dev
+        env:
+          REPOSITORY: SWYP-Woory/woory-backend
