Fix/deploy dev (#261)
* fix : 하위 workflow 실행되지 않는 문제 수정

- GITHUB_TOKEN을 사용해 호출하는 workflow의 경우 다른 workflow를 호출할 수 없는 문제 확인
- 이를 Deploy Key를 사용해 다른 workflow 호출할 수 있도록 수정

--- a/.github/workflows/push_if_merged.yaml
+++ b/.github/workflows/push_if_merged.yaml
@@ -17,12 +17,13 @@ jobs:
         with:
           persist-credentials: false
           fetch-depth: 0
+          ssh-key: ${{ secrets.COMMIT_KEY }}
       - run: |
           # 전역 설정 추가
           git config --global user.name "woory-actions"
           git config --global user.email "woory-actions@users.noreply.github.com"
           
-          git remote set-url origin "https://x-access-token:${{ secrets.GITHUB_TOKEN }}@github.com/$REPOSITORY.git"
+          git remote set-url origin "https://x-access-token:${{ secrets.COMMIT_KEY }}@github.com/$REPOSITORY.git"
           
           git checkout dev
           
