Fix/deploy dev (#262)
* fix : workflow에서 SSH 키를 사용하도록 수정

- SSH키 도입후  git remote set-url로 HTTPS 키를 사용하던 부분 수정

--- a/.github/workflows/push_if_merged.yaml
+++ b/.github/workflows/push_if_merged.yaml
@@ -1,8 +1,5 @@
 name: push feat to dev
 
-permissions:
-  contents: write
-
 on:
   pull_request:
     branches: [ feat ]
@@ -17,14 +14,12 @@ jobs:
         with:
           persist-credentials: false
           fetch-depth: 0
-          ssh-key: ${{ secrets.COMMIT_KEY }}
+          ssh-key: ${{ secrets.PUSH_KEY }} # 기존 GITHUB_TOKEN 대신 사용
       - run: |
           # 전역 설정 추가
           git config --global user.name "woory-actions"
           git config --global user.email "woory-actions@users.noreply.github.com"
-          
-          git remote set-url origin "https://x-access-token:${{ secrets.COMMIT_KEY }}@github.com/$REPOSITORY.git"
-          
+                
           git checkout dev
           
           git merge feat --no-edit
