test : AWS S3 테스트 추가
- [x] base64와 url에 대해서 정상적인 이미지 제공 시 저장 성공
- [x] base64와 url에 대해서 빈 문자열 제공 시 저장 실패
- [x] 없는 이미지 삭제 실패
- [x] 있는 이미지 정상 삭제 성공

--- a/src/test/resources/application-test.yaml
+++ b/src/test/resources/application-test.yaml
@@ -1,7 +1,7 @@
 cloud:
   aws:
     s3:
-      bucket: test
+      bucket: test-bucket/test
     region:
       static: ap-northeast-2
       auto: false
