--- a/.github/workflows/deploy_if_pushed.yml
+++ b/.github/workflows/deploy_if_pushed.yml
@@ -1,4 +1,4 @@
-name: CI/CD
+name: Deploy Dev branch
 
 on:
   push:
@@ -11,10 +11,10 @@ jobs:
 
     steps:
       # github에서 fetch해옴
-      - uses: actions/checkout@v4.1.7
+      - uses: actions/checkout@v4.2.2
 
       - name: Gradle 캐싱
-        uses: actions/cache@v3
+        uses: actions/cache@v4.1.2
         with:
           path: |
             ~/.gradle/caches
@@ -24,7 +24,7 @@ jobs:
             ${{ runner.os }}-gradle-
 
       - name: JDK 17 설치
-        uses: actions/setup-java@v4
+        uses: actions/setup-java@v4.5.0
         with:
           java-version: '17'
           distribution: 'zulu'
@@ -55,14 +55,14 @@ jobs:
         run: chmod +x ./gradlew
 
       - name: Build with Gradle
-        run: ./gradlew clean build -x test
+        run: ./gradlew clean build
 
       - name: Zip project files
         run: zip -r ./$GITHUB_SHA.zip . # 프로젝트 전체 파일 압축
 
       # github secret을 이용해 AWS 설정
       - name: AWS configure credentials
-        uses: aws-actions/configure-aws-credentials@v4
+        uses: aws-actions/configure-aws-credentials@v4.0.2
         with:
           aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
           aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
