chore : CI 테스트 스크립트 추가
- on.pull_request(_target)의 기본 실행 이벤트인 synchronized에 해당 브랜치로의 변경 사항이 적용되어 있어, push 이벤트는 따로 필요 없어 제거.
- src 디렉토리 이하의 내용이 변경되었을 때만 테스트하도록 paths 추가

--- a/.github/workflows/Test_pull_request.yml
+++ b/.github/workflows/Test_pull_request.yml
@@ -1,19 +1,18 @@
 name: Test_pull_request
 
 on:
-  push:
-    branches:
-      - feat
   pull_request_target:
     branches:
       - feat
+    paths:
+      - src/**
 
 jobs:
   Test:
     runs-on: ubuntu-latest
     steps:
       - name: Check access
-        if: ${{ github.event.pull_request.author_association != 'COLLABORATOR' && github.event.pull_request.author_association != 'MEMBER' && github.event.pull_request.author_association != 'CONTRIBUTOR'}}
+        if: ${{ github.event.pull_request.author_association != 'COLLABORATOR' && github.event.pull_request.author_association != 'MEMBER' && github.event.pull_request.author_association != 'CONTRIBUTOR' }}
         run: |
           echo "Event not triggered by a collaborator."
           exit 1
