chore : workflow 스크립트 수정
- mysql user가 아닌 mysql root password로 속성이 잘못 작성되어 있던 것 수정

--- a/.github/workflows/Test_pull_request.yml
+++ b/.github/workflows/Test_pull_request.yml
@@ -33,7 +33,7 @@ jobs:
         with:
           mysql version: '8.0'
           mysql database: 'test'
-          mysql root password: 'test'
+          mysql user: 'test'
           mysql password: 'test'
 
       - name: Grant execution permission to gradle
