--- a/.github/workflows/Test_pull_request.yml
+++ b/.github/workflows/Test_pull_request.yml
@@ -22,6 +22,9 @@ jobs:
         with:
           fetch-depth: 0
 
+      - name: Check log
+        run: git log --oneline
+
       - name: Set up Java
         uses: actions/setup-java@v4.5.0
         with:
