--- a/.github/workflows/Test_pull_request.yml
+++ b/.github/workflows/Test_pull_request.yml
@@ -21,7 +21,7 @@ jobs:
         uses: actions/checkout@v4.2.2
         with:
           fetch-depth: 0
-          ref: $GITHUB_REF
+          ref: ${{ GITHUB_REF }}
 
       - name: Check log
         run: git log --oneline
