--- a/src/test/resources/application-test.yml
+++ b/src/test/resources/application-test.yml
@@ -12,7 +12,7 @@ spring:
   datasource:
     url: jdbc:mysql://localhost:3306/test?profileSQL=true
     username: test
-    password: test
+    password: testtest
     driver-class-name: com.mysql.cj.jdbc.Driver
     hikari:
       data-source-properties:
