chore : application-test.yml 파일 변경에 따른 배포 스크립트 변경
- 데이터베이스 유저 아이디와 비밀번호 변경

--- a/.github/workflows/deploy_if_pushed.yml
+++ b/.github/workflows/deploy_if_pushed.yml
@@ -50,8 +50,8 @@ jobs:
         with:
           mysql version: '8.0'
           mysql database: 'woory'
-          mysql root password: ${{ secrets.TEST_DB_PW }}
-          mysql user: 'root'
+          mysql password: ${{ secrets.TEST_DB_PW }}
+          mysql user: 'test'
 
       - name: Grant execute permission for gradlew
         # 경로 확인 후 권한 부여
