chore : 테스트 결과 PR 출력하도록 수정

--- a/.github/workflows/Test_pull_request.yml
+++ b/.github/workflows/Test_pull_request.yml
@@ -48,3 +48,12 @@ jobs:
 
       - name: Start test
         run: ./gradlew test -i
+
+      - name: Publish Test Results
+        uses: EnricoMi/publish-unit-test-result-action@v2
+        if: always()
+        with:
+          files: |
+            test-results/**/*.xml
+            test-results/**/*.trx
+            test-results/**/*.json
