chore : 배포 스크립트 변경
- 테스트 설정에 맞도록 데이터베이스 이름 변경
- 빌드 정보 확인할 수 있도록 옵션 수정

--- a/.github/workflows/deploy_if_pushed.yml
+++ b/.github/workflows/deploy_if_pushed.yml
@@ -49,7 +49,7 @@ jobs:
         uses: mirromutth/mysql-action@v1.1
         with:
           mysql version: '8.0'
-          mysql database: 'woory'
+          mysql database: 'test'
           mysql password: ${{ secrets.TEST_DB_PW }}
           mysql user: 'test'
 
@@ -58,7 +58,7 @@ jobs:
         run: chmod +x ./gradlew
 
       - name: Build with Gradle
-        run: ./gradlew clean build
+        run: ./gradlew clean build -i
 
       - name: Zip project files
         run: zip -r ./$GITHUB_SHA.zip . # 프로젝트 전체 파일 압축
