chore : application-test 파일 수정
- 실제 SQL에서 실행되는 쿼리를 나타내는 profileSQL 제거

--- a/src/test/resources/application-test.yml
+++ b/src/test/resources/application-test.yml
@@ -10,7 +10,7 @@ cloud:
 
 spring:
   datasource:
-    url: jdbc:mysql://localhost:3306/test?profileSQL=true
+    url: jdbc:mysql://localhost:3306/test
     username: test
     password: testtest
     driver-class-name: com.mysql.cj.jdbc.Driver
