--- a/build.gradle
+++ b/build.gradle
@@ -30,6 +30,8 @@ dependencies {
     implementation 'org.mybatis.spring.boot:mybatis-spring-boot-starter:3.0.3'
     implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
     developmentOnly 'org.springframework.boot:spring-boot-devtools'
+    implementation 'com.sksamuel.scrimage:scrimage-core:4.3.0'
+    implementation 'com.sksamuel.scrimage:scrimage-webp:4.3.0'
 
     // JWT 사용
     implementation 'io.jsonwebtoken:jjwt-api:0.12.6'
