--- a/build.gradle
+++ b/build.gradle
@@ -33,6 +33,8 @@ dependencies {
     implementation 'com.sksamuel.scrimage:scrimage-core:4.3.0'
     implementation 'com.sksamuel.scrimage:scrimage-webp:4.3.0'
 
+    implementation 'org.apache.httpcomponents.client5:httpclient5'
+
     // JWT 사용
     implementation 'io.jsonwebtoken:jjwt-api:0.12.6'
     runtimeOnly 'io.jsonwebtoken:jjwt-impl:0.12.6'
